--- a/package.json
+++ b/package.json
@@ -10,8 +10,21 @@
     "test": "jest"
   },
   "dependencies": {
-    "react": "18.2.0",
-    "react-native": "0.73.4"
+    "@react-native-firebase/app": "^19.0.0",
+    "@react-native-firebase/auth": "^19.0.0",
+    "@react-native-firebase/firestore": "^19.0.0",
+    "@react-navigation/bottom-tabs": "^6.5.12",
+    "@react-navigation/material-top-tabs": "^6.6.8",
+    "@react-navigation/native": "^6.1.10",
+    "@react-navigation/native-stack": "^6.9.18",
+    "bcrypt-react-native": "^1.1.1",
+    "react": "^18.2.0",
+    "react-native": "^0.73.4",
+    "react-native-pager-view": "^6.2.3",
+    "react-native-phone-number-input": "^2.1.0",
+    "react-native-safe-area-context": "^4.9.0",
+    "react-native-screens": "^3.29.0",
+    "react-native-tab-view": "^3.5.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
